# pymoi

./: README.md  __init__.py  main.py  requirements.txt  setup.cfg
example/: 1_simply_csv_insert.py  2_simply_excel_insert.py  3_overwrite_logical.py  3_overwrite_physical.py  create_table.sql  create_table_ow.sql  main.py
example/data/: init.csv  init.xlsx  overwrite_case1.csv  overwrite_case2.csv
example/overwrite/: core.py  core2.py  create_table.sql  example.py  example2.py  overwrite_case1.csv  overwrite_case2.csv  table_init.csv
example/read_csv/: 1_simply_csv_insert.py  create_table.sql  example.py  example2.py  testdata_100.csv  testdata_100000.csv
example/read_excel/: 2_excel_insert.py  data.xlsx  example.py
pymoi/: __init__.py  core.py  reader.py  util.py
