[metadata]
name = pymoi
version = attr: pymoi._version.__version__
url = https://github.com/yswd82/pymoi
author = yswd82
author_email = y.sawada.82@gmail.com
license = MIT
description = DataFrame to SQL insert tool
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
install_requires =
    pandas
    sqlalchemy
    xlwings
zip_safe = False
packages = find: